--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
 												<div class="row gtr-50">
 													<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
 													<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
-													<div class="col-6"><a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.JPG" alt="" /></a></div>
+													<div class="col-6"><a href="#" class="image fit"><img src="images/pic07.JPG" alt="" /></a></div>
 												</div>
 											</div>
 											
