--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							<div class="col-12">
 								<div id="copyright">
 									<ul class="menu">
-										<li>&copy; Vighanesh Gaund. All rights reserved</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
+										<li>&copy; Vighanesh Gaund. All rights reserved</li>
 									</ul>
 								</div>
 							</div>
