--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Verti by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Verti by HTML5 UP</title>
+		<title>Vighanesh Gaund</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -187,7 +183,7 @@
 						<div class="col-12">
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; Vighanesh Gaund. All rights reserved</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; Vighanesh Gaund. All rights reserved</li>
 								</ul>
 							</div>
 						</div>
