--- a/software.html
+++ b/software.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Verti by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Verti by HTML5 UP</title>
@@ -156,7 +151,7 @@
 						<div class="col-12">
 							<div id="copyright">
 								<ul class="menu">
-									<li>&copy; Vighanesh Gaund. All rights reserved</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a></li>
+									<li>&copy; Vighanesh Gaund. All rights reserved</li>
 								</ul>
 							</div>
 						</div>
