--- a/software.html
+++ b/software.html
@@ -33,7 +33,7 @@
 									</li>
 									<li><a href="left-sidebar.html">Research Paper</a></li>
 									<li><a href="right-sidebar.html">Blogs</a></li>
-									<li><a href="Certifications.html">Certificatons</a></li>								</ul>
+									<li><a href="Certifications.html">Certifications</a></li>								</ul>
 							</nav>
 
 					</header>
