--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</div>
 							<div class="col-5 col-12-medium">
 								<ul>
-									<li><a href="https://drive.google.com/file/d/1t6jV4QTpfUKmymL9GEYKGSTCvKumAlDb/view?usp=sharing">Resume</a></li>
+									<li><a href="https://drive.google.com/file/d/1t6jV4QTpfUKmymL9GEYKGSTCvKumAlDb/view?usp=sharing" class="button large icon solid fa-arrow-circle-right">Resume</a></li>
 									<li><a href="https://www.linkedin.com/in/vgaund/" class="button large icon solid fa-arrow-circle-right">Linkedin</a></li>
 								</ul>
 							</div>
