--- a/projects.html
+++ b/projects.html
@@ -66,6 +66,21 @@
 
 								<!-- Box -->
 									<section class="box feature">
+										<a href="#" class="image featured"><img src="images/pic16.png" alt="" /></a>
+										<div class="inner">
+											<header>
+												<h2>Candles Company</h2>
+												<p>React and Node.js</p>
+											</header>
+											<p>Shopping Cart and Products</p>
+										</div>
+									</section>
+
+							</div>
+							<div class="col-4 col-12-medium">
+
+								<!-- Box -->
+									<section class="box feature">
 										<a href="#" class="image featured"><img src="images/pic08.png" alt="" /></a>
 										<div class="inner">
 											<header>
