--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 												<h2>TurnitUP (Web and Mobile Application)</h2>
 												<p>React and React Native</p>
 											</header>
-											<p>Its every students' dream to find relevant answers in minutes in one website or mobile application. So we decided to make a platform easy to use and most helpful to students in gaining knowledge through different professor across the world</p>
+											<p>Eductional Platform</p>
 										</div>
 									</section>
 
